<resources>
    <string name="app_name">homework3</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">Latitude</string>
    <string name="destination">Destination</string>
    <string name="longitude">Longitude</string>
    <string name="clear_all">Clear all</string>
    <string name="source">Source</string>
    <string name="distance">Distance</string>
    <string name="bearing">Bearing</string>
</resources>
